最大流最小割

--- a/source/_posts/动态规划.md
+++ b/source/_posts/动态规划.md
@@ -50,7 +50,7 @@ tags: 算法
 
 这个式子是非常激动人心的。我们要求出f(n)，只需要求出几个更小的f值；既然如此，我们从小到大把所有的f(i)求出来不就好了？注意一下边界情况即可。代码如下：
 
-![pic1](img/动态规划/解决方案.jpg)
+![pic1](../img/动态规划/解决方案.jpg)
 
 我们以O(n)的复杂度解决了这个问题。现在回过头来，我们看看它的原理：
 
