--- a/source/_posts/最大流最小割.md
+++ b/source/_posts/最大流最小割.md
@@ -1,9 +1,82 @@
 ---
 title: 最大流最小割
-tags: 算法
+tags: 高级算法设计与分析
 categories: 算法
 ---
 
 
+## 最小割
+在图论中，去掉其中所有边能使一张网络流图不再连通（即分成两个子图）的边集称为图的割。一个$st-cut$即去掉的边把源点s和汇点t划分在两个不同的部分。
 
-最大流最小割问题
+![pic1](../img/最大流最小割/最小割定义.png)
+
+一般来说，一张图中有多个不同的$st-cut$，如下图便为其中一个$st-cut$。
+
+
+![pic1](../img/最大流最小割/一个割例子.png)
+
+
+但是在实际应用中，我们去掉每条边往往都是有代价的，以边的容量作为权值，一个割中去掉的边的权值之和为这个割的值，那么最小割就是这张图上最小的割。
+
+
+
+## 最大流
+为了求解最小割，需要引入最大流的概念。用边的权值表示边的最大流量，一个$st-flow$是从源点s到汇点t的流量。通俗的讲，最大流就是从源点s到汇点t的最大流量。
+
+![pic1](../img/最大流最小割/最大流.png)
+
+
+
+## 求解最大流
+### 贪心算法
+
+- 开始时对每条边e令$f(e)=0$
+- 找到一条从源点s到汇点t的路径$s \rightarrow t$使路径上的每条边e满足$f(e)<c(e)$,其中$c(e)$为边e的权值
+- $flow = flow + 路径上的流量$
+- 重复上述步骤直至找不到新的路径
+
+
+### Ford-Fulkerson算法
+#### 残留图(Residual Graph)
+在另一个图中，额外构造一个反向边，权值是实际流过该边的流量$f(e)$。
+
+![pic1](../img/最大流最小割/残余图.png)
+
+剩余图有以下性质：
+- **增广路径(Augmenting Path)**:一个增广路径P是从残余图中的一条简单路径$s \rightarrow t$
+- 增广路径的容量是该条路径所有边中的最小权值
+
+#### 算法说明
+- 每次找到一条从s到t的增广路径，并调整flow和残留图，不断调整直到没有增广路径
+- 当残留图中不存在从s到t的增广路径时，该图已经达到最大流
+
+#### 例子
+
+初始时没有反向边,此时残留图等于原图
+
+![pic1](../img/最大流最小割/Ford-Fulkerson例子1.png)
+
+从中选取一条增广路径,并更新残留图和原图
+
+![pic1](../img/最大流最小割/Ford-Fulkerson例子2.png)
+
+重复上面的步骤,注意**增广路径一定要从残留图中找**,且可以使用残留图中的反向边.
+
+
+![pic1](../img/最大流最小割/Ford-Fulkerson例子3.png)
+
+![pic1](../img/最大流最小割/Ford-Fulkerson例子4.png)
+
+![pic1](../img/最大流最小割/Ford-Fulkerson例子5.png)
+
+![pic1](../img/最大流最小割/Ford-Fulkerson例子6.png)
+
+![pic1](../img/最大流最小割/Ford-Fulkerson例子7.png)
+
+此时,没有新的增广路径,则最大流的值等于流出源点s的流量减去流进s的流量,即$flow = s_{out} - s_{in}$
+
+## 最大流与最小割的关系
+最大流最小割定理：最大流=最小割。
+
+
+
