最大流最小割

--- a/source/_posts/最大流最小割.md
+++ b/source/_posts/最大流最小割.md
@@ -76,7 +76,18 @@ categories: 算法
 此时,没有新的增广路径,则最大流的值等于流出源点s的流量减去流进s的流量,即$flow = s_{out} - s_{in}$
 
 ## 最大流与最小割的关系
-最大流最小割定理：最大流=最小割。
+**最大流最小割定理：最大流=最小割。** 最大流-最小割定理用来证明Ford-Fulkson方法的确达到了最大流.
 
+![pic1](../img/最大流最小割/最大流最小割定理.png)
+
+
+证明:
+- $(i) \Rightarrow (ii)$ :弱对偶性法则的推论
+- $(ii) \Rightarrow (iii)$:反证法  
+若f是一个最大流,且仍存在增广路径,那么可以让f加上增广路径的流量,与f是一个最大流相悖.故$(ii) \Rightarrow (iii)$成立
+- $(iii) \Rightarrow (i)$
+设f是一个流,且没有增广路径,令A等于s的可达顶点集,则
+
+![pic1](../img/最大流最小割/iii到i.png)
 
 
