--- a/source/_posts/最大流最小割.md
+++ b/source/_posts/最大流最小割.md
@@ -55,31 +55,31 @@ math: true
 
 初始时没有反向边,此时残留图等于原图
 
-![pic5](../img/最大流最小割/Ford-Fulkerson例子1.png)
+![](../img/最大流最小割/Ford-Fulkerson例子1.png)
 
 从中选取一条增广路径,并更新残留图和原图
 
-![pic6](../img/最大流最小割/Ford-Fulkerson例子2.png)
+![](../img/最大流最小割/Ford-Fulkerson例子2.png)
 
 重复上面的步骤,注意**增广路径一定要从残留图中找**,且可以使用残留图中的反向边.
 
 
-![pic7](../img/最大流最小割/Ford-Fulkerson例子3.png)
+![](../img/最大流最小割/Ford-Fulkerson例子3.png)
 
-![pic8](../img/最大流最小割/Ford-Fulkerson例子4.png)
+![](../img/最大流最小割/Ford-Fulkerson例子4.png)
 
-![pic9](../img/最大流最小割/Ford-Fulkerson例子5.png)
+![](../img/最大流最小割/Ford-Fulkerson例子5.png)
 
-![pic10](../img/最大流最小割/Ford-Fulkerson例子6.png)
+![](../img/最大流最小割/Ford-Fulkerson例子6.png)
 
-![pic11](../img/最大流最小割/Ford-Fulkerson例子7.png)
+![](../img/最大流最小割/Ford-Fulkerson例子7.png)
 
 此时,没有新的增广路径,则最大流的值等于流出源点s的流量减去流进s的流量,即 $flow = s_{out} - s_{in}$
 
 ## 最大流与最小割的关系
 **最大流最小割定理：最大流=最小割。** 最大流-最小割定理用来证明Ford-Fulkson方法的确达到了最大流.
 
-![pic12](../img/最大流最小割/最大流最小割定理.png)
+![最大流最小割定理](../img/最大流最小割/最大流最小割定理.png)
 
 
 证明:
@@ -89,6 +89,6 @@ math: true
 - $(iii) \Rightarrow (i)$
 设f是一个流,且没有增广路径,令A等于s的可达顶点集,则
 
-![pic13](../img/最大流最小割/iii到i.png)
+![](../img/最大流最小割/iii到i.png)
 
 
