添加奇异值分解

--- a/source/_posts/矩阵分解.md
+++ b/source/_posts/矩阵分解.md
@@ -1,13 +1,15 @@
 ---
 title: 矩阵分解
-categories: [数学， 矩阵论]
+categories: 
+    - 数学
+    - 矩阵论
 tags: 矩阵论
 ---
 
 <!-- <link href="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/KaTeX/0.10.2/katex.min.css" rel="stylesheet"> -->
 
-## 正交三角分解(QR分解)
-### 满秩矩阵的 QR 分解
+## 三角分解(QR分解)
+### 正交三角分解(通过Schmidt正交化)
 若 $n$ 阶实矩阵 $A\in \mathbb {C}^{n\times n}$ 满秩，且 $$A = [\alpha_1,...,\alpha_n]$$
 
 其中 $\alpha_1,...,\alpha_n$ 是 $\mathbb {C}^{n\times n}$  中线性无关向量组
@@ -30,11 +32,11 @@ $$ \begin{aligned} \begin{bmatrix}\alpha_1,\alpha_2,...,\alpha_n\end{bmatrix} &=
 
 令 
 
-$$ q_1=\frac{\beta_1}{||\beta_1||}\\ \vdots \\ q_n = \frac{\beta_n}{||\beta_n||} $$
+$$ q_1=\frac{\beta_1}{||\beta_1||} \\ \vdots \\ q_n = \frac{\beta_n}{||\beta_n||} $$
 
 变形得 
 
-$$ \beta_1 = q_1||\beta_1||\\ \vdots \\ \beta_n = q_n ||\beta_n|| $$
+$$\beta_1 = q_1||\beta_1|| \\ \vdots \\ \beta_n = q_n ||\beta_n|| $$
 
 写成矩阵形式 
 
@@ -48,9 +50,89 @@ $$ \begin{aligned} A &= B\begin{bmatrix}1&\frac{\left<\beta_1,\alpha_1\right>}{\
 
 且分解唯一
 
-### QR 分解的求法
+**正交三角分解的求法**
 1. 取矩阵 $A=(A_1,A_2,...,A_n)$ 的列向量，进行 **Schmidt 标准正交化**,得 $v_1,v_2,...,v_n$ ，有 $$Q=(v_1,v_2,...,v_n)$$
 2. 再由 $R=Q^HA$ 得到 $R$ , 于是 $A=QR$
+
+
+
+### HouseHolder变换分解
+将矩阵A按列划分为 $(\alpha_1,\alpha_2,\dots,\alpha_n)$,以4阶方阵为例，
+
+第一步
+令
+$$\omega_1=\frac{\alpha_1-a_1*e_1}{||\alpha_1-a_1*e_1||_2}，a_1=||\alpha_1||_2$$
+
+于是
+$$H_1A=(H_1\alpha_1,H_1\alpha_2，...，H_1\alpha_n)
+=\left\{\begin{matrix} a_1 & * & \cdots & * \\
+                   0      & \\
+                   \vdots & &B_1 \\
+0\end{matrix}\right\}$$
+
+第二步
+
+从第一步中得到 $B_1=(\beta_2,\beta_2,\cdots,\beta_n)\in R^{n-1}$
+
+取 $$\omega_2=\frac{\beta_2-b_2*e_1}{||\beta_2-b_2*e_1||_2}，b_1=||\beta_2||_2$$
+
+则 $$\widehat{H_2}=I-2*\omega_2*\omega_2^T,H_2=\left\{\begin{matrix} 1 & 0^T \\ 
+                                                              0 & \widehat{H_2}，
+                                              \end{matrix} \right\}$$
+
+得到
+$$H_2(H_1*A) = \begin{bmatrix}   a_1 & * & * & \cdots &* \\ 
+                                       0 & a_2 & * & \cdots &* \\
+                                       0 & 0 &  &\\
+                                       \vdots & \vdots &  &C_2& \\
+                                       0 & 0
+\end{bmatrix} , C_2\in R^{n-2}$$
+
+依次类推，进行第n步时，得到第n-1个 $H_{n-1}$阵,使得
+$$H_{n-1} \cdots H_2H_1*A = \begin{bmatrix}   a_1 & * & * & \cdots & * \\ 
+                                                   0 & a_2 & * & \cdots & * \\
+                                                   0 & 0 & a_3 & \cdots & *\\
+                                                  \vdots & \vdots & &\ddots \\
+                                                    0 & 0 & 0 & \cdots &a_n
+\end{bmatrix}=R$$
+
+
+其中 $H_{n-1} \cdots H_2H_1*A=H$也称为HouseHolder矩阵，也为自逆矩阵 $H=H^{-1}$
+
+$$H_{n-1} \cdots H_2H_1*A=R$$
+$$\Rightarrow (H_{n-1} \cdots H_2*H_1)^{-1}*H_{n-1} \cdots H_2H_1*A=(H_{n-1} \cdots H_2*H_1)^{-1}*R$$
+$$\Rightarrow A=H_1^{-1} \cdots H_{n-1}^{-1}*R$$
+$$\Rightarrow A=H_1\cdots H_{n-1}*R$$
+
+得到 $A=QR$,其中 $Q$为正交矩阵， $R$为上三角矩阵
+$$\begin{cases}
+Q = H_1\cdots H_{n-1}\\
+R = Q^{-1}A=QA 
+\end{cases}$$
+
+### 三角分解的性质
+**定理1**:设 $A\in \mathbb {C}_r^{m\times n}$，则 $A$ 可以唯一地分解为
+$$A=U_1 R$$
+
+其中 $U_1$是酉矩阵， $R$ 是正线上三角复矩阵，或 $A$ 可以唯一地分解为
+$$A=L U_2$$
+
+其中 $L$是正线下三角复矩阵， $U_2$是酉矩阵
+
+
+**推论1**：设 $A \in \mathbb {R}^{n × n}_n$,则 $A$可以唯一地分解为
+$$A=Q_1 R$$
+
+其中 $Q_1$是则正交矩阵，$R$是正线上三角实矩阵，或 $A$可以唯一地分解为
+$$A=L Q_2$$
+
+其中 $L$是正线下三角实矩阵， $Q_2$是正交矩阵。
+
+**推论2**：设A是实对称正定矩阵，则存在唯一正线上三角实矩阵 $R$，使得
+$$A=R^T R$$
+
+**推论3**：设 $A$是正定Hermite矩阵，则存在唯一正线上三角复矩阵$R$，使得
+$$A=R^H R$$
 
 
 ## 矩阵的满秩分解
@@ -78,7 +160,7 @@ $$ \begin{aligned} A &= P^{-1}\begin{bmatrix}E_r\\0\end{bmatrix}\begin{bmatrix}E
 
 $$ A = [\alpha_1,\alpha_2,...,\alpha_n]\\ B = [\beta_1,\beta_2,...,\beta_r]$$
 
-其中 \beta_1,...,\beta_r 线性无关 
+其中 $\beta_1,...,\beta_r$ 线性无关 
 
 所以 
 $$ \begin{aligned} &A=BC\\ &\Rightarrow[\alpha_1,\alpha_2,...,\alpha_n]=[\beta_1,...,\beta_r]\begin{bmatrix}c_{11}&\cdots &c_{1n}\\\vdots &\ddots&\vdots\\c_{r1}&\cdots &c_{rn}\end{bmatrix} \end{aligned} $$
@@ -107,11 +189,11 @@ $$ B = \begin{bmatrix}2&1&-2\\2&5&-1\\1&3&-1\end{bmatrix},C = \begin{bmatrix}1&0
 
 ## 矩阵的LU分解
 LU 分解（LU Decomposition）是矩阵分解的一种，可以将一个矩阵分解为一个单位下三角矩阵和一个上三角矩阵的乘积，以四阶矩阵为例
-$$ L = \begin{bmatrix}1&0&0&0\\*&1&0&0\\*&*&1&0\\*&*&*&1\end{bmatrix}, U=\begin{bmatrix}*&*&*&*\\0&*&*&*\\0&0&*&*\\0&0&0&*\end{bmatrix} $$
+$$ L = \begin{bmatrix}1&0&0&0 \\ *&1&0&0\\ *&*&1&0\\ *&*&*&1\end{bmatrix}, U=\begin{bmatrix}*&*&*&*\\0&*&*&*\\0&0&*&*\\0&0&0&*\end{bmatrix} $$
 
 LU 矩阵是否一定存在？答案是否，具体看下面的例子
 
-设 $\begin {bmatrix} 0&1\\1&0\end {bmatrix}=\begin {bmatrix} a&0\\b&c\end {bmatrix}\begin {bmatrix} l&m\\0&n\end {bmatrix}$，则应该满足如下 4 个式子
+设 $\begin {bmatrix} 0&1 \\1&0\end {bmatrix}=\begin {bmatrix} a&0\\b&c\end {bmatrix}\begin {bmatrix} l&m\\0&n\end {bmatrix}$，则应该满足如下 4 个式子
 
 $$ \begin{cases} al=0\\ am=1\\ bl=1\\ bm+cn=0 \end{cases} $$
 
@@ -140,4 +222,86 @@ $$ \begin{cases} u_1=2\\ u_2=3\\ u_3=4\\ l_1u_1=1\\ l_1u_2+u_4=1\\ l_1u_3+u_5=9\
 上面的方程组非常容易解，最后求出
 
 $$ L = \begin{bmatrix}1&0&0\\\frac{1}{2}&1&0\\\frac{1}{2}&-1&1\end{bmatrix},U=\begin{bmatrix}2&3&4\\0&-\frac{1}{2}&7\\0&0&-1\end{bmatrix} $$
+
+
+
+## 奇异值分解
+**奇异值**：设 $A \in \mathbb{C}^{m × n}_r,AA^H$ 的特征值为
+$$\lambda_1 \ge \lambda_2 \ge \dots \ge \lambda_n = 0$$
+
+则称 $\sigma_i=\sqrt{\lambda_i}$ 为矩阵A的正奇异值。**$A$ 和$A^H$相同的奇异值**。
+
+**奇异值分解**：当给定一个大小为$m × n$的矩阵$A$,虽然矩阵$A$不一定是方阵，但大小为$m × m$的$AA^T$和$n × n$的$AA^T$是对称矩阵,若$AA^T=P \Lambda_1 Q^T$,$A^T A=Q\Lambda_2 Q^T$,则矩阵A的奇异值分解为
+$$A=P\Sigma Q^T$$
+
+其中，矩阵$P=(\overrightarrow{p_1}, \overrightarrow{p_2}, \dots, \overrightarrow{p_m})$的大小为 $m × m$，列向量 $\overrightarrow{p_1}, \overrightarrow{p_2}, \dots, \overrightarrow{p_m}$是 $AA^T$的特征向量，也被称为矩阵$A$的左奇异向量（left singular vector）；矩阵$Q=(\overrightarrow{q_1}, \overrightarrow{q_2}, \dots, \overrightarrow{q_m})$的大小为 $n × n$，列向量 $\overrightarrow{q_1}, \overrightarrow{q_2}, \dots, \overrightarrow{q_m}$是 $A^TA$的特征向量，也被称为矩阵$A$的右奇异向量（left singular vector）；矩阵$\Lambda_1$的大小为$m × m$，矩阵$\Lambda_2$的大小为$n × n$，两个矩阵对角线上的非零元素相同（即矩阵$AA^T$和$A^TA$的非零特征值相同）；矩阵$\Sigma$的大小为$m × n$，位于对角线上的元素被称为**奇异值**（singular value）。
+
+设$A$的秩为r，当 $m \ne n$时，矩阵$\Lambda_1$和$\Lambda_2$的大小显然是不同的，但是他们对角线上的非零元素是相同的，记矩阵$\Lambda_1$(或$\Lambda_2$)对角线上的非零元素为$\lambda_1,\lambda_2,\dots,\lambda_r$，这些数皆为非负数，又记矩阵$\Sigma$对角线上的非零元素分别为$\sigma_1,\sigma_2,\dots,\sigma_r$，则
+$$\sigma_1=\sqrt{\lambda_1},\sigma_2=\sqrt{\lambda_2},\dots,\sigma_r=\sqrt{\lambda_r}$$
+
+即非零奇异值的平方对应着矩阵$\Lambda_1$（或矩阵$\Lambda_2$）的非零特征值，到这里，我们就不难看出奇异值分解与对称对角化分解的关系了，即我们可以由对称对角化分解得到我们想要的奇异值分解。
+
+**例1**：一个$3×2$的矩阵$A=\begin{bmatrix}
+    1&2 \\ 0&0 \\ 0&0
+\end{bmatrix}$，求其奇异值分解。
+
+由
+$$AA^T=\begin{bmatrix}
+    5&0&0 \\ 0&0&0 \\ 0&0&0
+\end{bmatrix}$$
+
+得到其特征值$\lambda_1=5,\lambda_2=\lambda_3=0$，特征向量为$\overrightarrow{p_1}=(1,0,0)^T,\overrightarrow{p_2}=(0,1,0)^T,\overrightarrow{p_3}=(0,0,1)^T$
+
+由$A^TA=\begin{bmatrix}
+    1&2 \\ 2&4
+\end{bmatrix}$
+
+得到其特征值$\lambda_1=5,\lambda_2=0$，特征向量为$\overrightarrow{q_1}=(\frac{\sqrt{5}}{5},\frac{2\sqrt{5}}{5})^T,\overrightarrow{q_2}=(-\frac{\sqrt{5}}{5},\frac{2\sqrt{5}}{5})^T$
+
+令
+$$\Sigma=\begin{bmatrix}
+    \sqrt{5}&0 \\ 0&0 \\ 0&0
+\end{bmatrix}$$
+
+注意矩阵$\Sigma$的大小为$3 × 2$，此时，矩阵$A$的奇异值分解为
+$$A=P\Sigma Q^T=(\overrightarrow{p_1}, \overrightarrow{p_2}, \overrightarrow{p_3})\Sigma (\overrightarrow{q_1}, \overrightarrow{q_2})^T \\ =\begin{bmatrix}
+    1&0&0 \\ 0&1&0 \\ 0&0&1
+\end{bmatrix} \begin{bmatrix}
+    \sqrt{5}&0 \\ 0&0 \\ 0&0
+\end{bmatrix} \begin{bmatrix}
+    \frac{\sqrt{5}}{5}&\frac{2\sqrt{5}}{5} \\ \frac{-2\sqrt{5}}{5}&\frac{\sqrt{5}}{5}
+\end{bmatrix} = \begin{bmatrix}
+    1&2 \\ 0&0 \\ 0&0
+\end{bmatrix}$$
+
+
+**例2**：求对称矩阵$A=\begin{bmatrix}
+    2&1 \\ 1&2
+\end{bmatrix}$的奇异值分解。
+
+经计算可以发现$A^TA=AA^T=\begin{bmatrix}
+    2&1 \\ 1&2
+\end{bmatrix} 
+\begin{bmatrix}
+    2&1 \\ 1&2
+\end{bmatrix}=\begin{bmatrix}
+    5&4 \\ 4&5
+\end{bmatrix}$，左奇异向量和右奇异向量构成的矩阵也是相等的，即$$P=Q=\begin{bmatrix}
+    \frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2} \\ -\frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2}
+\end{bmatrix}$$
+
+则其奇异值分解为$A=P\Sigma Q^T=\begin{bmatrix}
+    \frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2} \\ -\frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2}
+\end{bmatrix}
+\begin{bmatrix}
+    3&0 \\ 0&1
+\end{bmatrix}\begin{bmatrix}
+    \frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2} \\ -\frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2}
+\end{bmatrix}$
+
+**注**：这是由于当矩阵$A$为对称矩阵时，其可以被正交对角化，这时奇异值分解等于正交对角化分解。
+
+
+
+
 
