添加latex常用命令

--- a/source/_posts/矩阵分解.md
+++ b/source/_posts/矩阵分解.md
@@ -10,7 +10,8 @@ tags: 矩阵论
 
 ## 三角分解(QR分解)
 ### 正交三角分解(通过Schmidt正交化)
-若 $n$ 阶实矩阵 $A\in \mathbb {C}^{n\times n}$ 满秩，且 $$A = [\alpha_1,...,\alpha_n]$$
+若 $n$ 阶实矩阵 $A\in \mathbb {C}^{n\times n}$ 满秩，且 
+$$A = [\alpha_1,...,\alpha_n]$$
 
 其中 $\alpha_1,...,\alpha_n$ 是 $\mathbb {C}^{n\times n}$  中线性无关向量组
 
@@ -252,9 +253,10 @@ $$AA^T=\begin{bmatrix}
 
 得到其特征值$\lambda_1=5,\lambda_2=\lambda_3=0$，特征向量为$\overrightarrow{p_1}=(1,0,0)^T,\overrightarrow{p_2}=(0,1,0)^T,\overrightarrow{p_3}=(0,0,1)^T$
 
-由$A^TA=\begin{bmatrix}
+由
+$$A^TA=\begin{bmatrix}
     1&2 \\ 2&4
-\end{bmatrix}$
+\end{bmatrix}$$
 
 得到其特征值$\lambda_1=5,\lambda_2=0$，特征向量为$\overrightarrow{q_1}=(\frac{\sqrt{5}}{5},\frac{2\sqrt{5}}{5})^T,\overrightarrow{q_2}=(-\frac{\sqrt{5}}{5},\frac{2\sqrt{5}}{5})^T$
 
@@ -286,20 +288,27 @@ $$A=P\Sigma Q^T=(\overrightarrow{p_1}, \overrightarrow{p_2}, \overrightarrow{p_3
     2&1 \\ 1&2
 \end{bmatrix}=\begin{bmatrix}
     5&4 \\ 4&5
-\end{bmatrix}$，左奇异向量和右奇异向量构成的矩阵也是相等的，即$$P=Q=\begin{bmatrix}
+\end{bmatrix}$，左奇异向量和右奇异向量构成的矩阵也是相等的，即
+$$P=Q=\begin{bmatrix}
     \frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2} \\ -\frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2}
 \end{bmatrix}$$
 
-则其奇异值分解为$A=P\Sigma Q^T=\begin{bmatrix}
-    \frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2} \\ -\frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2}
+则其奇异值分解为
+$$A=P\Sigma Q^T=\begin{bmatrix}
+    \frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2} \\ - \frac{\sqrt{2}}{2}& \frac{\sqrt{2}}{2}
 \end{bmatrix}
 \begin{bmatrix}
     3&0 \\ 0&1
 \end{bmatrix}\begin{bmatrix}
     \frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2} \\ -\frac{\sqrt{2}}{2}&\frac{\sqrt{2}}{2}
-\end{bmatrix}$
+\end{bmatrix}$$
 
 **注**：这是由于当矩阵$A$为对称矩阵时，其可以被正交对角化，这时奇异值分解等于正交对角化分解。
+
+## 谱分解
+
+未完待续
+<!-- https://www.cnblogs.com/blairgrowing/p/15800825.html -->
 
 
 
