矩阵广义逆以及Jordan标准型

--- a/source/_posts/矩阵分解.md
+++ b/source/_posts/矩阵分解.md
@@ -307,7 +307,70 @@ $$A=P\Sigma Q^T=\begin{bmatrix}
 
 ## 谱分解
 
-未完待续
+**谱分解**：设 $A \in \mathbb{C}^{n × n}$是单纯矩阵，则 $A$可以分解为一系列幂等矩阵 $A_i(i=1,2, \dots,n)$的加权和
+$$A=\sum_{i=1}^n \lambda_i A_i$$
+
+其中 $\lambda_i(i=1,2,\dots,n)$是A的特征值。
+
+**单纯矩阵**：若矩阵 $A$的**代数重数**等于**几何重数**，则称$A$为单纯矩阵。**代数重数**为矩阵 $A$特征值的重数，**几何重数**为齐次方程组$Ax=\lambda_i x(i=1,2,\dots,k)$的解空间$V_{\lambda_i}$的维数，也即特征值对应的最多无关特征向量数。
+
+**幂等矩阵**：若 $A$为方阵，且 $A^2=A$，则称$A$为幂等矩阵。所有幂等矩阵都相似与对角元全为0或1的对角阵。
+
+**更一般的单纯矩阵谱分解定理**：设 $A \in \mathbb{C}^{n × n}$，他有 $k$个相异特征值 $\lambda_i(i=1,2,\dots,k)$，则 $A$是单纯矩阵的充要条件是存在$k$个矩阵$A_i(i=1,2,\dots,k)$满足
+1. $A_i A_j = \begin{cases}
+    A_i, i=j \\ 0, i\ne j
+\end{cases}$
+2. $\sum_{i=1}^k A_i = E_n$
+3. $A=\sum_{i=1}^k \lambda_i A_i$
+
+该定理比定理3要求放宽了，不再要求必须要有n个特征值了，这里的k可以小于等于n。
+
+
+**例1**：求正规矩阵 $A = \begin{bmatrix}
+    0&1&1&1 \\ 1&0&-1&1 \\ 1&-1&0&1 \\ -1&1&1&0
+\end{bmatrix}$的谱分解表达式。
+
+**解**：首先计算 $A$的特征值和特征向量
+$$|\lambda_ I - A |=(\lambda - 1)^3 (\lambda + 3)$$
+
+从而 $A$的特征值为
+$$\lambda_1=\lambda_2=\lambda_3=1,\lambda_4=-3$$
+
+当$\lambda=1$时，求得无关的特征向量为
+$$\alpha_1=(1,1,0,0)^T \\ \alpha_2=(1,0,1,0)^T \\ \alpha_3=(-1,0,0,1)^T$$
+
+当$\lambda=-3$时，求得无关的特征向量为
+$$\alpha_4=(1,-1,-1,1)^T$$
+
+将 $\alpha_1,\alpha_2,\alpha_3$正交化并单位化得
+$$\eta_1=(\frac{1}{\sqrt{2}},\frac{1}{\sqrt{2}},0,0)^T \\ 
+\eta_2=(\frac{1}{\sqrt{6}},\frac{1}{\sqrt{6}},\frac{2}{\sqrt{6}},0)^T \\
+\eta_3=(-\frac{1}{2\sqrt{3}},\frac{1}{2\sqrt{3}},\frac{1}{\sqrt{3}},\frac{3}{2\sqrt{3}})^T$$
+
+将$\alpha_4$单位话得
+$$\eta_4=(\frac{1}{2}, -\frac{1}{2},-\frac{1}{2},\frac{1}{2})$$
+
+故有
+$$G_1=\eta_1 \eta_1^H+\eta_2 \eta_2^H +\eta_3 \eta_3^H \\ 
+= \begin{bmatrix}
+    \frac{3}{4}&\frac{1}{4}&\frac{1}{4}&-\frac{1}{4} \\
+    \frac{1}{4}&\frac{3}{4}&-\frac{1}{4}&\frac{1}{4} \\
+    \frac{1}{4}&-\frac{1}{4}&\frac{3}{4}&\frac{1}{4} \\
+    -\frac{1}{4}&\frac{1}{4}&\frac{1}{4}&\frac{3}{4}    
+\end{bmatrix}$$
+
+$$G_2=\eta_4 \eta_4^H \\
+=\begin{bmatrix}
+    \frac{1}{4}&-\frac{1}{4}&-\frac{1}{4}&\frac{1}{4} \\
+    -\frac{1}{4}&\frac{1}{4}&\frac{1}{4}&-\frac{1}{4} \\
+    -\frac{1}{4}&\frac{1}{4}&\frac{1}{4}&-\frac{1}{4} \\
+    \frac{1}{4}&-\frac{1}{4}&-\frac{1}{4}&\frac{1}{4} 
+\end{bmatrix}$$
+
+这样其谱分解表达式为
+$$A=G_1 - 3G_2$$
+
+注意$G_1$和$G_2$的系数$\lambda_i$为其对应的特征值。
 <!-- https://www.cnblogs.com/blairgrowing/p/15800825.html -->
 
 
