--- a/source/_posts/多项式规约.md
+++ b/source/_posts/多项式规约.md
@@ -1,22 +1,11 @@
 ---
 title: 多项式规约
 categories: 算法
-tags: 高级算法设计与分析
+tags:
+    - 算法
+    - 高级算法设计与分析
 math: true
 ---
-
-
-## NP、NPC、NPH问题
-**NP问题** ：能在多项式时间内验证某个猜想答案的正确性，但可能在无法再多项式时间内解决。比如：数独，很容易就确定一个答案是否正确，但确找不到一个公式来描述其规律。
-
-**NPC问题**: 需要满足两个条件
-    
-- 它是一个NP问题
-- 所有的NP问题都可以规约到NP-complete
-**如果**我们给NPC问题找到了一个多项式时间复杂度的算法，那么也就意味着我们给所有的NP问题找到了多项式时间复杂度的算法，从而NP=P，因为P=NP，所以“P对NP问题”就可以被解决。但给NPC问题找一个多项式时间复杂度的算法太难了，所以现在人们普遍相信P≠NP。
-
-
-**NPH问题** ：满足上面NPC问题的第二个条件，但不一定要满足第一个条件，所以NPH的范围比HPC更大。
 
 ## 多项式规约
 定义：若问题X 的任意实例可以由下面两条之和解决
@@ -90,15 +79,15 @@ $\Leftarrow$
 
 **例子**：有如下点覆盖
 
-![](../img/多项式规约/VertexCover归约到SetCover例子.png)
+![](/img/多项式规约/VertexCover归约到SetCover例子.png)
 
 构造Set Cover的$U$为Vertex Cover的边集，即$U=(1,2,3,4,5,6)$，Set Cover的每个子集$S_i$为Vertex Cover中对应顶点所连的边,故有
 $$
-    S_a=\{3,7\} \\
-    S_b=\{2,4\} \\
-    S_c=\{3,4,5,6\} \\
-    S_d=\{5\}  \\ 
-    S_e=\{1\} \\
+    S_a=\{3,7\}， \\
+    S_b=\{2,4\}， \\
+    S_c=\{3,4,5,6\}， \\
+    S_d=\{5\}，  \\ 
+    S_e=\{1\}， \\
     S_f=\{1,2,6,7\} 
     $$
 
@@ -143,3 +132,10 @@ $\Rightarrow$
 $\Leftarrow$
 
 给定3-SAT一个满足的赋值，在每个三角形中选取一个取值为1的顶点，这样便构成了一个大小为$k$的独立集。
+
+## 自规约（重要）
+**决策问题（Decision Problem）**：诸如"是否存在一个$size \ge k$的点覆盖"
+
+**求解问题（Search Problem）**：诸如"寻找一个最小的点覆盖"
+
+**自规约（Self-Reducibility）**：Search Problem $\le_p$ Search Problem
