修改矩阵论内容

--- a/source/_posts/特征值估计.md
+++ b/source/_posts/特征值估计.md
@@ -5,16 +5,16 @@ categories:
     - 数学
     - 矩阵论
 ---
-
+**shur不等式**
 ![](/img/矩阵论/特征值估计-shur不等式.png)
 
 证明如下：
 ![](/img/矩阵论/shur不等式证明.png)
 
-行盖尔圆盘和列盖尔圆盘：
+**行盖尔圆盘和列盖尔圆盘**：
 ![](/img/矩阵论/盖尔圆盘.png)
 
-圆盘定理：
+**圆盘定理**：
 ![](/img/矩阵论/圆盘定理1.png)
 ![](/img/矩阵论/圆盘定理2.png)
 
@@ -22,6 +22,15 @@ categories:
 
 推论2： 设$n$阶实阵$A$的$n$个盖尔圆盘两两互不相交，则$A$特征值全为实数.
 
-对角占优矩阵：
+**对角占优矩阵**：
 
 ![](/img/矩阵论/对角占优矩阵.png)
+
+**Rayleigh商**：设$A \in \mathbb{C}^{n \times n}$为Hermite矩阵，$x \in \mathbb{C}$，称
+$$R(x)=\frac{x^HAx}{x^Hx}, x \ne 0$$
+
+为$A$的Rayleigh商。
+
+**定理（Rayleigh-Ritz）**:
+![](/img/矩阵论/Rayleigh-Ritz定理.png)
+
