--- a/source/_posts/范数.md
+++ b/source/_posts/范数.md
@@ -7,6 +7,11 @@ categories:
     - 矩阵论
 ---
 
+不管向量范数、矩阵范数还是算子范数，都需要满足三个特性:
+
+- 正定性
+- 齐次性
+- 三角不等式
 
 ## 向量范数
 **1 - 范数**：$\Vert \boldsymbol {x}\Vert_1=\sum\limits_{i=1}^N |x_i|$，即向量元素绝对值之和
@@ -15,7 +20,7 @@ categories:
 
 **$\infty$- 范数**:$\Vert \boldsymbol {x}\Vert_{\infty}=\max\limits_{i} |x_i|$，即所有向量元素中绝对值的最大值
 
-**-$\infty$- 范数**:$\Vert \boldsymbol {x}\Vert_{-\infty}=\min\limits_{i} |x_i|$，即所有向量元素绝对值中的最小值
+<!-- **-$\infty$- 范数**:$\Vert \boldsymbol {x}\Vert_{-\infty}=\min\limits_{i} |x_i|$，即所有向量元素绝对值中的最小值 -->
 
 **P - 范数**:$\Vert \boldsymbol {x}\Vert_p=(\sum\limits_{i=1}^N (x_i)^p)^{\frac {1}{p}}$，即向量元素的 p 次方和再开 p 次方
 
