修改部分注释

--- a/source/_posts/近似算法.md
+++ b/source/_posts/近似算法.md
@@ -145,7 +145,7 @@ $$dist(s,C) \le dist(s, c_i) \le dist(s, c_i^*) + dist(c_i^*, c_i) \le r(C^*) + 
 
 ![](/img/近似算法/WeightedVertexCover-不等式放缩.png)
 
-(上面第一个 $\le$ 好像可以写成等号？)
+上面第一个$\le$不能写成等号，等号只在每条边都恰好只有一个顶点在$S$中时才成立，若有边的两个顶点都在$S$中，那么这条边就会被计算两次。
 
 求解过程：边的价格设置与找寻顶点覆盖同时进行
 
