修改部分说明

--- a/source/_posts/近似算法.md
+++ b/source/_posts/近似算法.md
@@ -56,7 +56,7 @@ $$  \begin{aligned}
 分配任务$j$后,由上式以及引理2:
 $$L_i = (L_i -t_i) + t_j \le L^* + \max\limits_j t_j \le L^* + L^* = 2L^*$$
 
-那么贪心算法是Load Balancing的紧2倍近似算法吗?所谓紧的是指该算法可以相比于最优解更低的倍率吗(如1.5倍)?若可以则说明贪心算法并不是Load Balancing的紧2倍近似算法.
+那么贪心算法是Load Balancing的紧2倍近似算法吗?判断$\rho$-近似算法是否紧的要看该算法相比于最优解有比$\rho$更低的近似率吗?若有则说明其并不是紧的。
 
 答:大致是的,考虑下面的一个Load Balancing的实例,有$m$个机器,$m^2$个任务,其中有$m(m-1)$个任务运行时间为1,一个任务的运行时间为$m$.贪心算法的结果如下图所示:
 
