修改部分说明

--- a/source/_posts/近似算法.md
+++ b/source/_posts/近似算法.md
@@ -168,7 +168,7 @@ $$dist(s,C) \le dist(s, c_i) \le dist(s, c_i^*) + dist(c_i^*, c_i) \le r(C^*) + 
 
 ![](/img/近似算法/证明PricingMethod2倍近似解.png)
 
-第一处放缩很容易得出，$S$肯定为顶点集$V$的一个子集；$\sum\limits_{i \in V} \sum\limits_{e=(i,j)} p_e = 2 \sum\limits_{e \in E} p_e$是因为算与$V$中所有顶点相连的边时，每条边会被计算两次；最右边一个放缩为引理的结论。
+第一处放缩很容易得出，$S$肯定为顶点集$V$的一个子集；$\sum\limits_{i \in V} \sum\limits_{e=(i,j)} p_e = 2 \sum\limits_{e \in E} p_e$是因为计算与$V$中所有顶点相连的边时，每条边会被计算两次；最右边一个放缩为引理的结论。
 
 
 
