--- a/source/_posts/平稳过程.md
+++ b/source/_posts/平稳过程.md
@@ -72,4 +72,10 @@ $$X(t)=W(t+a)-W(t), t \ge 0, \quad (a>0)$$
 定理:
 ![](/img/随机过程/平稳过程/定理5.2.3.png)
 
+定理：
+![](/img/随机过程/平稳过程/定理5.2.4.png)
+
+推论：
+![](/img/随机过程/平稳过程/定理5.2.4推论1.png)
+
 
