--- a/source/_posts/近似算法.md
+++ b/source/_posts/近似算法.md
@@ -172,12 +172,116 @@ $$dist(s,C) \le dist(s, c_i) \le dist(s, c_i^*) + dist(c_i^*, c_i) \le r(C^*) + 
 
 
 
+## 线性规划解决最小带权点覆盖问题
 
 
 
+### 整数规划
+对于图$G=(V,E)$,对图中的每个点$v \in V$，定义函数$x(v) \in {0, 1}$,且 $x(v)=0$，表示顶点 $v$不在点覆盖集合里。
+
+对图中任意一条边 $(u,v) \in E$,由点覆盖定义，顶点$u$、顶点$v$ 至少有一个必须在点覆盖中 ，因此：$x(u) + x(v) \ge 1$.
+
+因而得到最小权值点覆盖的规划模型：其中$w(v)$ 表示顶点$v$的权值。
+
+![](/img/近似算法/整数规划.png)
+
+### 线性规划
+线性规划在整数规划的基础之上不再限定$x(v)$只为0或1，而是有一个范围 $x(v) \in [0, 1]$  这样在整数规划中的$x(u) + x(v) \ge 1$仍然成立.
+这是可以的。因为：前者是后者的一个特例。前者称为0-1整数规划，后者为普通的线性规划。因此，线性规划中的最优解是0-1整数规划最优解的一个下界（因为线性规划最优解包含了0-1整数规划最优解）。
+
+**用线性规划的解来构造最小权值点覆盖问题的近似解算法**:
+
+对于每一个顶点$v$，都会求得一个$x(v)$的值。若，$x(v) \ge 1/2$ ,则将该顶点加入到点覆盖集合中，否则舍去顶点$v$，直至图G中所有的顶点都处理完毕。此时得到的顶点集合$C$即为最小权值点覆盖问题的近似解的点覆盖集合。
 
 
+**线性规划求得的顶点集合C是最小权值点覆盖问题的二倍近似解**:
 
+设 $C*$ 是最小权值点覆盖问题的一个最优解，$Z$ 是线性规划的一个最优解， $C$是最小权值点覆盖问题的近似解.
+
+1. 由于最小权值点覆盖问题的一个最优解是线性规划的一个可行解，故：$Z \le W(C*)$($W$为求权值的函数)
+2. 为什么求得的集合$C$就是一个点覆盖呢？因为对任意边$(u,v) \in E$,有$x(u)+x(v)\ge 1$，即在$x(u)$和$x(v)$中至少有一个的值大于1/2。因此，顶点$u$、$v$ 至少有一个会被加入到集合$C$中，从而使得图$G$中的每一条边都会被覆盖。
+3. 由下式
+
+![](/img/近似算法/证明线性规划是2倍近似解.png)
+
+以及$Z \le W(C*)$,知:$W(C) \le 2Z <=2W(C*)$,即近似解$C$的权值$W(C) \le$ 二倍最优解C*的权值.
+
+那么是否有比2倍近似解更小的近似解?最小的近似解倍率是多少?
+
+答:有.
+
+**定理**: 若 P $\ne$ np,那么没有比$\rho = 1.3607(10\sqrt{5} - 21)$更小的$\rho$-近似解.
+
+
+## 多项式时间逼近算法(Polynomial Time Approximation Scheme)
+上面的$\rho$-近似算法是通过牺牲最优解来换取时间和例子,多项式时间逼近算法可以产生任意高质量的解决方案，但以精度换取时间。
+
+以背包问题为例:物品$i$的价值为$v_i$ ,重量为$w_i$;背包最多可以拿的物品重量为$W$.现在求最大可以拿取的物品价值。
+
+![](/img/近似算法/背包问题-例子.png)
+
+### 方法1：动态规划-1
+定义$OPT(i,w)=$所有物品中可以拿到的**最大价值**。
+
+- 若$OPT$没有选择物品$i$
+  - $OPT$在容量为$w$的情况下在物品$1,2,\dots,i-1$中选取得到最优解
+- 若$OPT$选择物品$i$
+  - 新的容量为$w-w_i$
+  - $OPT$在容量为$w-w_i$的情况下在物品$1,2,\dots,i-1$中选取得到最优解
+
+![](/img/近似算法/背包问题-动态规划1.png)
+
+运行时间：$O(n W)$
+- 其中$W=$重量限制
+- 输入**不是**多项式的
+
+### 方法2：动态规划2
+定义$OPT(i,v)=$物品$1,2,\dots,i$中拿取且得到的物品价值为$v$所消耗的**最小重量**
+
+- 若$OPT$没有选择物品$i$
+  - $OPT$在物品$1,2,\dots,i-1$中选取得到的物品价值为$v$
+- 若$OPT$选择物品$i$
+  - 消耗重量$w_i$,且新的价值为$v-v_i$
+  - $OPT$在物品$1,2,\dots,i-1$中选取得到的物品价值为$v$
+
+![](/img/近似算法/背包问题-动态规划2.png)
+
+运行时间：$O(n V^*)=O(n^2 v_{max})$
+
+- $V^*$为在$OPT(n, v) \le W$的情况下可以选取的最大价值
+- 输入**不是**多项式的
+
+
+### 多项式时间逼近算法
+以上的动态规划都可以得到最优解，但是考虑一个问题：若所有物品的价值远大于重量的时候，上面的动态规划还可行吗？
+
+这时候问题的输入不是多项式的（物品的价值，因为在计算机内数据都要转化为2进制再处理），这时候为了使求解时间更快，引入了新的算法**多项式时间逼近算法（Polynomial Time Approximation Scheme）**。它的大致思想是：
+
+- 将所有的价值向上舍入到一个较小的范围里
+- 在向上舍入后的实力上运行动态规划算法
+- 得到四舍五入实例的最优解
+
+![](/img/近似算法/背包问题-四舍五入.png)
+
+首先对所有价值向上舍入：
+
+![](/img/近似算法/向上舍入.png)
+
+- $v_{max}$为原始例子里的最大价值
+- $\varepsilon$为精确参数
+- $\theta$为放缩因子
+
+对于放缩之后的例子，复杂度$O(n^3 / \varepsilon)$,使用上面的动态规划-2方法的运行时间为$0(n^2 \hat{v}_{max})$.
+
+其中
+
+![](/img/近似算法/公式1.png)
+
+**定理**：若$S$为多项式时间逼近算法找到的一个解，同时$S^*$为另一个可行解，那么有 $(1+\varepsilon) \sum\limits_{i \in S}v_i \ge \sum\limits_{i \in S^*}v_i$
+
+证明：
+
+![](/img/近似算法/多项式时间逼近算法-证明.png)
 
 
 
