--- a/source/_posts/近似算法.md
+++ b/source/_posts/近似算法.md
@@ -36,7 +36,7 @@ categories:
 
 **引理2**:最优解makespan $L^* \ge \frac{1}{m} \sum\limits_j t_j$
 
-所有任务的总运行时间为$\sum\limits_j t_j$,那么$L^*$的时间跨度必然选自$m$个机器中的一个,而每个机器的最小时间跨度为$\frac{1}{m}$的总运行时间.
+所有任务的总运行时间为$\sum\limits_j t_j$,那么$L^*$的时间跨度必然选自$m$个机器中最大的一个,而$m$个机器中的最大时间跨度一定不小于$\frac{1}{m}$的总运行时间.
 
 **定理:贪心算法是Load Balancing问题的二倍近似算法。**
 
@@ -189,6 +189,9 @@ $$dist(s,C) \le dist(s, c_i) \le dist(s, c_i^*) + dist(c_i^*, c_i) \le r(C^*) + 
 线性规划在整数规划的基础之上不再限定$x(v)$只为0或1，而是有一个范围 $x(v) \in [0, 1]$  这样在整数规划中的$x(u) + x(v) \ge 1$仍然成立.
 这是可以的。因为：前者是后者的一个特例。前者称为0-1整数规划，后者为普通的线性规划。因此，线性规划中的最优解是0-1整数规划最优解的一个下界（因为线性规划最优解包含了0-1整数规划最优解）。
 
+![](/img/近似算法/点覆盖-LP规划.png)
+
+
 **用线性规划的解来构造最小权值点覆盖问题的近似解算法**:
 
 对于每一个顶点$v$，都会求得一个$x(v)$的值。若，$x(v) \ge 1/2$ ,则将该顶点加入到点覆盖集合中，否则舍去顶点$v$，直至图G中所有的顶点都处理完毕。此时得到的顶点集合$C$即为最小权值点覆盖问题的近似解的点覆盖集合。
@@ -196,7 +199,7 @@ $$dist(s,C) \le dist(s, c_i) \le dist(s, c_i^*) + dist(c_i^*, c_i) \le r(C^*) + 
 
 **线性规划求得的顶点集合C是最小权值点覆盖问题的二倍近似解**:
 
-设 $C*$ 是最小权值点覆盖问题的一个最优解，$Z$ 是线性规划的一个最优解， $C$是最小权值点覆盖问题的近似解.
+设 $C^*$ 是最小权值点覆盖问题的一个最优解，$Z$ 是线性规划的一个最优解， $C$是最小权值点覆盖问题的近似解.
 
 1. 由于最小权值点覆盖问题的一个最优解是线性规划的一个可行解，故：$Z \le W(C*)$($W$为求权值的函数)
 2. 为什么求得的集合$C$就是一个点覆盖呢？因为对任意边$(u,v) \in E$,有$x(u)+x(v)\ge 1$，即在$x(u)$和$x(v)$中至少有一个的值大于1/2。因此，顶点$u$、$v$ 至少有一个会被加入到集合$C$中，从而使得图$G$中的每一条边都会被覆盖。
@@ -210,7 +213,7 @@ $$dist(s,C) \le dist(s, c_i) \le dist(s, c_i^*) + dist(c_i^*, c_i) \le r(C^*) + 
 
 答:有.
 
-**定理**: 若 P $\ne$ np,那么没有比$\rho = 1.3607(10\sqrt{5} - 21)$更小的$\rho$-近似解.
+**定理**: 若 P $\ne$ NP,那么没有比$\rho = 1.3607(10\sqrt{5} - 21)$更小的$\rho$-近似解.
 
 
 ## 多项式时间逼近算法(Polynomial Time Approximation Scheme)
@@ -232,7 +235,8 @@ $$dist(s,C) \le dist(s, c_i) \le dist(s, c_i^*) + dist(c_i^*, c_i) \le r(C^*) + 
 ![](/img/近似算法/背包问题-动态规划1.png)
 
 运行时间：$O(n W)$
-- 其中$W=$重量限制
+
+- $W=$重量限制
 - 输入**不是**多项式的
 
 ### 方法2：动态规划2
@@ -259,7 +263,9 @@ $$dist(s,C) \le dist(s, c_i) \le dist(s, c_i^*) + dist(c_i^*, c_i) \le r(C^*) + 
 
 - 将所有的价值向上舍入到一个较小的范围里
 - 在向上舍入后的实力上运行动态规划算法
-- 得到四舍五入实例的最优解
+- 得到向上舍入实例的最优解
+
+注：这里一定要是向上舍入而不能是四舍五入，虽然全部向上舍入可能会在原来的问题中丢失一些较为优质的解，但是若四舍五入的时候，若有向下舍去的价值，可能在新的实例中找到的解在原问题中是不可行解。
 
 ![](/img/近似算法/背包问题-四舍五入.png)
 
